Заменено использование устаревшего конструктора на фабричный метод.